# RIku

./: .gitignore  README.md  linux-generate-binary.sh  linux-setup.sh  linux-setup.txt
Riku/: CMakeLists.txt  Riku.sln  count_lines.sh  filters_from_directories.py  frontend-config.json  frontend_config.json  get_cpp_names.py  linux-launch.sh
Riku/GUI/fonts/: MochiyPopOne-18.font
Riku/GUI/imagesets/: Riku.imageset
Riku/GUI/layouts/: RikuBuildingUI.layout  RikuGameUI.layout  RikuJoinGameMenu.layout  RikuLoadPopup.layout  RikuMainMenu.layout  RikuMiniGameUI.layout  RikuNewGameMenu.layout  RikuOptionsMenu.layout  RikuPopup.layout  RikuPopupWithEditbox.layout  RikuRecruitingUI.layout  RikuYourTurn.layout  test.layout
Riku/GUI/looknfeel/: Riku.looknfeel
Riku/GUI/schemes/: Riku.scheme
Riku/Riku/: AddPlayerResources.cpp  AddPlayerResources.h  Area.cpp  Area.h  Biome.h  ChangePlayerResources.cpp  ChangePlayerResources.h  Communicator.cpp  Communicator.h  ExtractResources.cpp  ExtractResources.h  GameLogic.cpp  GameLogic.h  GameState.cpp  GameState.h  GenerateResources.cpp  GenerateResources.h  Ground.cpp  Ground.h  ICostModifier.h  IMove.h  IPatchHandler.h  IRequestHandler.h  ITileObject.h  LogicAssets.h  LogicResources.cpp  LogicResources.h  MapRequestHandler.cpp  MapRequestHandler.h  MapResponse.cpp  MapResponse.h  Patch.h  Player.cpp  Player.h  PlayerPatch.h  PlayerPatchHandler.cpp  PlayerPatchHandler.h  RemovePlayerResources.cpp  RemovePlayerResources.h  Request.cpp  (+24 more)
Riku/Riku/Debug/: vc142.idb
Riku/Riku/Debug/Riku.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Riku.lastbuildstate
Riku/Riku/GUI/imagesets/: Riku.imageset
Riku/Riku/GUI/layouts/: RikuBuildingUI.layout  RikuGameUI.layout  RikuMainMenu.layout
Riku/Riku/x64/Debug/: Riku.exe.recipe  Riku.vcxproj.FileListAbsolute.txt  vc142.idb
Riku/Tests/: FrontendLogicIntegration.h  FrontendMiniGameIntegration.h  LogicAssetTests.h  LuaAssetsTests.h  Mocks.h  PatchHandlerTests.h  PatchesTests.h  PlayerTests.h  Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters  TileTest.h  Utils.h  packages.config
Riku/Tests/testAssets/basicLuaTest/: script.lua
Riku/Tests/testAssets/functionAsset/: script.lua
Riku/Tests/testAssets/testAreas/: script.lua
Riku/Tests/testAssets/testBiomes/: script.lua
Riku/Tests/testAssets/testGrounds/: script.lua
Riku/Tests/testAssets/testMapGenerator/: script.lua
Riku/Tests/testAssets/testResources/: script.lua
Riku/assets/: front.json
Riku/assets/areas/: front.json
Riku/assets/biomes/: LICENSE  cactus.dae  forest.mtl  front.json  lan.json  script.lua
Riku/assets/cactus/: script.lua
Riku/assets/front-essentials/: flat.mtl
Riku/assets/generateMap/: script.lua
Riku/assets/grounds/: front.json  grass.mtl  lan.json  sand.mtl  script.lua  stone.mtl
Riku/assets/ironFactory/: front.json
Riku/assets/jungle/: Palm.blend  front.json  script.lua
Riku/assets/knight/: lan.json  script.lua
Riku/assets/military_barraks/: LICENCE  lan.json  script.lua
Riku/assets/miniunitFactory/: lan.json  script.lua
Riku/assets/parent/: script.lua
Riku/assets/peasant/: lan.json
Riku/assets/player_start/: script.lua
Riku/assets/resources/: front.json  lan.json  script.lua
Riku/assets/skillFactory/: front.json  lan.json  script.lua
Riku/assets/stefan/: front.json  lan.json  license  script.lua
Riku/assets/stoneFactory/: front.json  lan.json  script.lua
Riku/assets/taiga_tree/: Tree 3.blend  script.lua
Riku/assets/tree/: front.json  script.lua
Riku/assets/unit/: script.lua
Riku/assets/warrior/: lan.json  license
Riku/assets/well/: lan.json  script.lua
Riku/assets/winCondition/: script.lua
Riku/assets/wizard/: front.json  lan.json
Riku/assets/woodFactory/: front.json  lan.json  script.lua
Riku/data/: License.txt
Riku/data/layouts/: test.layout
Riku/lang/: en.json  ja.json  pl.json
Riku/lib/: stb_image.h  zmq.cpp  zmq_addon.hpp
Riku/lib/sol/: config.hpp  sol.hpp
Riku/mini_assets/Courage/: script.lua
Riku/mini_assets/Fireball/: script.lua
Riku/mini_assets/archer/: script.lua
Riku/mini_assets/minigame_julka/: front.json  lan.json  script.lua
Riku/mini_assets/minigame_maciek/: front.json  lan.json  script.lua
Riku/mini_assets/warrior/: front.json  script.lua
Riku/models/: LICENSE  sawmill_animated_unwrapped.blend  sawmill_log_animated.blend
Riku/models/Assassin/: Assassin.blend
Riku/models/floor/: floor.blend  grass.mtl  grid.mtl  sand.mtl  tile.mtl  water.mtl
Riku/models/grounds/: LICENSE  grass.mtl  sand.mtl  stone.mtl
Riku/models/objects/: sawmill.blend  sawmill_blades_animated.blend
Riku/saves/: test.sav
Riku/shaders/: light-fragment.shader  mass-fragment.shader  mass-vertex.shader  phong-fragment.shader  phong-vertex.shader
Riku/src/: Camera.h  Config.cpp  FrontendConfig.cpp  FrontendConfig.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Riku.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp  stb_image.cpp
Riku/src/Frontend/: Config.cpp  Config.h  Frontend.cpp  Frontend.h  FrontendState.cpp  FrontendState.h  FrontendUtils.cpp  FrontendUtils.h  FrustumCulling.cpp  FrustumCulling.h  Functor.h  GUI.cpp  GUI.h  GUICallbacks.h  GUIFactory.cpp  GUIFactory.h  GUIUpdate.cpp  GUIUpdate.h  IDrawable.h  JsonUtil.cpp  JsonUtil.h  Lang.cpp  Lang.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureTransform.cpp  TextureTransform.h  Transform.cpp  Transform.h  Util.cpp  Util.h
Riku/src/GameLogic/: GameLogic.cpp  GameLogic.h  GameState.h  IAsset.h  IHookable.h  IMiniGame.h  LoadedHookable.cpp  LoadedHookable.h  LogicAssets.cpp  LogicAssets.h  LogicUtils.cpp  LogicUtils.h  MoveWrapper.h  Resource.h
Riku/src/MiniGame/: MiniGame.cpp  MiniGame.h  MiniGameAssetInitializer.cpp  MiniGameAssetInitializer.h  MiniGameAssets.cpp  MiniGameAssets.h  MiniGameState.cpp  MiniGameState.h
Riku/src/Network/: InvitationAcceptance.h  NetworkUtils.cpp  NetworkUtils.h  WebModule.cpp  WebModule.h
Riku/src/logic/: Asset.cpp  Asset.h
Riku/x64/Debug/: Riku.ilk
(+442 files in other folders)
